Added Documentation for getting started
Added a simple Model (Cocktails.scala) as an example of using Slick and
evolutions

--- a/README
+++ b/README
@@ -1,4 +1,21 @@
-This is your new Play application
+We need to name our app
 =================================
 
-This file will be packaged with your application, when using `activator dist`.
+**To get this up and running on your local machine:
+
+1. First make sure you have the JDK 1.7 or higer installed. 
+2. Download [Play](https://www.playframework.com/download) and install it. 
+3. Clone this repo
+4. Open a Command Prompt and CD into the repo you just cloned. 
+5. Type `activator` to be placed in the play console
+6. Now type `test` to run the test suite
+7. If the tests passed, type `run` to run the web server
+8. In your browser, navigate to `localhost:9000`
+
+
+**To push any changes to Heroku:
+1. Create an account on Heroku if you don't already have one
+2. Download and install the [Heroku Toolkit](https://toolbelt.heroku.com/)
+3. Open a Command Prompt and CD into this repo
+4. Type `heroku login` to login to heroku
+5. Now add the heroku remote by typing `git remote add heroku git@heroku.com:intense-peak-3971.git`
